methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:41: error: not found: value PINK
setCouleurBrosse(PINK)
                 ^